[package]
name = "cs361-accounts"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.7", features = ["mysql", "chrono"] }
dotenvy = "0.15.7"
mysqlclient-sys = { version = "0.4.2", features = ["bundled"] }
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
